# libgdiplus

./: configure.in
src/: Makefile.am  gdiplus-private.h  image.c  image.h  jpegcodec.c  jpegcodec.h
src/libjpeg/: Makefile.am  jpeg-data.c  jpeg-data.h
tests/: Makefile.am  testprops.c  testprops.h
